# erf-amrwind-driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: gcc.yml
CMake/: BuildExe.CMake  BuildExe.cmake  SetAmrexOptions.cmake
Exec/: CMakeLists.txt
Exec/ABL/: CMakeLists.txt  input_amrwind  input_erf  input_sounding  inputs_amrex  prob.H  prob.cpp
Exec/CouetteFlow/: CMakeLists.txt  input_amrwind  input_erf  input_erf1  inputs_amrex  prob.H  prob.cpp
Exec/MultiBlockABL/: input_erf1  inputs_amrex  prob.H  prob.cpp
Exec/MultiBlockCouette/: input_amrwind  input_erf1  inputs_amrex  prob.H  prob.cpp
Exec/PoiseuilleFlow/: CMakeLists.txt  input_amrwind  input_erf  input_erf1  inputs_amrex  prob.H  prob.cpp
Source/: ERF_Evolve_MB.cpp  amrwind_Evolve_MB.cpp  main.cpp
Source/MultiBlock/: MultiBlockContainer.H  MultiBlockContainer.cpp
Source/wind_energy/: ABLBoundaryPlane.H  ABLBoundaryPlane.cpp  ABLFieldInit.H  ABLFieldInit.cpp  ABLReadERF.H  ABLReadERF.cpp
